# Semantic_Search_Thingiverse_Hidden_Code

semantic-search-thingiverse-hidden-code/: README.md  pyproject.toml  requirements.txt
semantic-search-thingiverse-hidden-code/src/semantic_search_thingiverse_hidden_code/: thing_details_only_id_summary (2) (1).csv
semantic-search-thingiverse-hidden-code/src/semantic_search_thingiverse_hidden_code/benchmarking/dataset_size/: dataset_size_benchmark.ipynb  performance_metrics_vs_dataset_size.csv
semantic-search-thingiverse-hidden-code/src/semantic_search_thingiverse_hidden_code/benchmarking/keywords_in_query/: benchmarking_results_with_metrics.csv  keyword_in_query_benchmark.ipynb  keyword_in_query_benchmark_ai.ipynb
semantic-search-thingiverse-hidden-code/src/semantic_search_thingiverse_hidden_code/benchmarking/relevancy/: aggregated_evaluation_metrics.csv  evaluation_metrics.csv  relevancy_benchmark.ipynb  relevancy_benchmark_ai.ipynb  test.csv  test.py  test2.csv
semantic-search-thingiverse-hidden-code/src/semantic_search_thingiverse_hidden_code/benchmarking/similarity_threshold/: benchmark_performance_metrics.csv  similarity_threshold_benchmark.ipynb  similarity_threshold_benchmark_ai.ipynb
semantic-search-thingiverse-hidden-code/src/semantic_search_thingiverse_hidden_code/benchmarking/target_density/: target_density_benchmark.ipynb
semantic-search-thingiverse-hidden-code/src/semantic_search_thingiverse_hidden_code/main_AI_nonAI_multi_edge/: main_AI_nonAI_multi_edge.ipynb
semantic-search-thingiverse-hidden-code/src/semantic_search_thingiverse_hidden_code/main_gen_AI/: Thingiverse_Scraper.py  main_gen_AI.ipynb
semantic-search-thingiverse-hidden-code/src/semantic_search_thingiverse_hidden_code/main_gen_AI/generate_description_options/: generate_description_main.py  generate_description_more_expensive.py
semantic-search-thingiverse-hidden-code/src/semantic_search_thingiverse_hidden_code/main_non_AI/: main_non_AI.ipynb
