[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-search-thingiverse-hidden-code"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/U.N. Owen/semantic-search-thingiverse-hidden-code#readme"
Issues = "https://github.com/U.N. Owen/semantic-search-thingiverse-hidden-code/issues"
Source = "https://github.com/U.N. Owen/semantic-search-thingiverse-hidden-code"

[tool.hatch.version]
path = "src/semantic_search_thingiverse_hidden_code/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/semantic_search_thingiverse_hidden_code tests}"

[tool.coverage.run]
source_pkgs = ["semantic_search_thingiverse_hidden_code", "tests"]
branch = true
parallel = true
omit = [
  "src/semantic_search_thingiverse_hidden_code/__about__.py",
]

[tool.coverage.paths]
semantic_search_thingiverse_hidden_code = ["src/semantic_search_thingiverse_hidden_code", "*/semantic-search-thingiverse-hidden-code/src/semantic_search_thingiverse_hidden_code"]
tests = ["tests", "*/semantic-search-thingiverse-hidden-code/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
